RESOLVED FIXED303822
[GTK] Fix Cairo build
https://bugs.webkit.org/show_bug.cgi?id=303822
Summary [GTK] Fix Cairo build
Simon Pena
Reported 2025-12-09 03:47:52 PST
WebPrintOperationGtk used a now removed ::take method. This needs to be replaced with ::takeBuffer
Attachments
Simon Pena
Comment 1 2025-12-09 03:51:48 PST
EWS
Comment 2 2025-12-09 04:45:57 PST
Committed 304151@main (4d3922444f56): <https://commits.webkit.org/304151@main> Reviewed commits have been landed. Closing PR #55100 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.