[GTK] Fix Cairo build https://bugs.webkit.org/show_bug.cgi?id=303822

Unreviewed build fix.

SharedBufferBuilder::take has been removed in 303790@main and needs to be
replaced with SharedBufferBuilder::takeBuffer here.

* Source/WebKit/WebProcess/WebPage/gtk/WebPrintOperationGtk.cpp:
(WebKit::WebPrintOperationGtk::endPrint):

Canonical link: https://commits.webkit.org/304151@main